--- a/assets/css/components/header.scss
+++ b/assets/css/components/header.scss
@@ -63,6 +63,7 @@
     @media screen and (max-width: $medium) {
       display: block;
       margin-top: 6px;
+      z-index: 99999;
     }
   }
   &__end {
