--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -218,3 +218,47 @@ hr {
   background: white;
   opacity: 0.2;
 }
+.burger-menu {
+  display: none;
+  align-items: center;
+  @media screen and (max-width: $medium) {
+    display: flex;
+  }
+}
+
+.burger-icon {
+  width: 30px;
+  height: 20px;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.line {
+  width: 100%;
+  height: 3px;
+  background-color: #333;
+}
+
+.menu {
+  display: none;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.menu.active {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 100px 20px 20px 0;
+  position: fixed;
+  width: 50%;
+  align-items: flex-end;
+  right: 0;
+  background: var(--bg);
+  top: 0;
+  height: 100dvh;
+  z-index: 999;
+}
